# wayside

./: README.md
admin-panel/: package-lock.json  package.json
admin-panel/src/: App.jsx
esp-ble-firmware/main/: CMakeLists.txt  bt_task.c  definitions.h  main.c  services.h
esp-ble-firmware/main/drivers/: nfc.c  nfc.h
esp-firmware/: CMakeLists.txt
esp-nfc-example/: sdkconfig  sdkconfig.old
esp-nfc-example/main/: CMakeLists.txt  definitions.h  main.c
esp-nfc-example/main/drivers/: adc.h  name.c  name.h  nfc.c
firmware/: .gitignore  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/components/aw9523/: CMakeLists.txt  Doxyfile  README.md  aw9523.c  idf_component.yml
firmware/main/: CMakeLists.txt  Kconfig.projbuild
firmware/main/drivers/: adc.c  nfc.h
firmware/main/lib/: ble_task.h  button_task.h  buzzer.h  definitions.h  espnow.h  espnow_example.h  keygen.h  monitor.h  nfc.h  nfc_pair.h  pairing.h  proximity.h  states.h  wifi_task.h
firmware/main/src/: ble_task.c  button_task.c  buzzer.c  espnow.c  firmware.c  keygen.c  main.c  main_buzzer_example.c  monitor.c  nfc.c  nfc_pair.c  pairing.c  proximity.c  wifi_task.c
wayside-app/: README.md  app.json  index.tsx  package-lock.json  package.json
wayside-app/app/: _layout.tsx  index.tsx
wayside-app/app/(tabs)/: index.tsx
wayside-app/components/: DashboardStep.tsx  InterestsStep.tsx  KeyExchangeStep.tsx  PairingStep.tsx  SelfieUploadStep.tsx  ble-uart.tsx
wayside-app/screens/: SetupScreen.tsx
wayside-app/utils/: ble-helpers.ts  ble-uart.ts  nfc-pairing.ts  supabase.ts
(+7 files in other folders)
